# Rag_Project

./: .gitignore  README.md  api.py  docker-compose.yml  generation.py  ingestion.py  mlflow.db  prometheus.yml  prometheus_metrics.py  pyproject.toml  requirements.txt  retrieval.py  retrieval_utils.py  semantic_cache.py  text_utils.py
chroma_db/: chroma.sqlite3
docs/: Dew_sales.txt  FedAdaPriv_CPU_Paper.docx  FedAdaPriv_CPU_Revised_Q1.docx  FedAdaPriv_Experiments_Section.docx  Marinda_sales.txt  Pepsi_sales.txt
scripts/: test_hybrid_rerank.py  test_numeric_parser.py
